[package]
name = "rust-soldering-station"
version = "0.1.0"
authors = ["Radovan Blažek <blazra@gmail.com>"]
license = "0BSD"

[[bin]]
name = "rust-soldering-station"
test = false
bench = false

[dependencies]
stm32f1xx-hal = { version = "0.2.1", features = ["stm32f103", "rt"] }
cortex-m-rtfm = { version = "0.4.2", features = ["timer-queue"] }
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
panic-semihosting = "0.5.1"
embedded-hal = "0.2.2"
embedded-graphics = "0.4.7"
ssd1306 = "0.2.4"
numtoa = "0.2.3"
nb = "0.1.1"

[profile.dev]
opt-level = 1

[profile.release]
debug = false
