[package]
name = "rust-soldering-station"
version = "0.1.0"
authors = ["Radovan Blažek <blazra@gmail.com>"]
license = "0BSD"

[[bin]]
name = "rust-soldering-station"
test = false
bench = false

[dependencies]
stm32f1xx-hal = { version = "0.4.0", features = ["stm32f103", "rt"] }
cortex-m-rtfm = { git = "https://github.com/japaric/cortex-m-rtfm", branch = "master", features = ["timer-queue"] }
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
panic-semihosting = "0.5.3"
embedded-hal = "0.2.3"
embedded-graphics = "0.6.0-alpha.2"
ssd1306 = "0.3.0-alpha.1"
numtoa = "0.2.3"
nb = "0.1.2"

[profile.dev]
opt-level = 1

[profile.release]
debug = false
